--- a/test/config-search/scss/main.scss
+++ b/test/config-search/scss/main.scss
@@ -3,7 +3,6 @@
 body {
   background: red;
   appearance: none;
-  font-size: rfs(40px);
-  padding: rfs(2rem);
+  font-size: 40px;
   line-height: 20px;
 }
