--- a/test/config-search/dest/css/main.css
+++ b/test/config-search/dest/css/main.css
@@ -1,1 +1,1 @@
-body{background:#00f;background:red;-webkit-appearance:none;-moz-appearance:none;appearance:none;font-size:calc(1.375rem + 1.5vw);padding:calc(1.325rem + .9vw);line-height:20px}@media (min-width:1200px){body{font-size:2.5rem;padding:2rem}}
+body{-webkit-appearance:none;-moz-appearance:none;appearance:none;background:#00f;background:red;font-size:calc(1.375rem + 1.5vw);line-height:20px;padding:calc(1.325rem + .9vw)}@media (min-width:1200px){body{font-size:2.5rem;padding:2rem}}
